--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,16 +28,27 @@ environment:
 # versions available, run `flutter pub outdated`.
 dependencies:
   body_detection: ^0.0.3
+  camera: ^0.9.4+5
   change_app_package_name: ^1.1.0
+  charts_flutter: ^0.12.0
+  circular_countdown_timer: ^0.2.2
   cupertino_icons: ^1.0.2
   firebase_auth: ^3.3.3
   firebase_core: ^1.10.5
   fl_chart: ^0.55.0
   flutter:
     sdk: flutter
-  flutter_tts: ^3.5.0
+  flutter_rating_bar: ^4.0.1
+  flutter_ringtone_player: ^3.2.0
+  flutter_tts: ^3.5.1
+  heart_bpm: ^1.1.1+0
+  percent_indicator: ^4.2.2
   permission_handler: ^10.0.0
+  rflutter_alert: ^2.0.4
+  text_to_speech: ^0.2.3
+  vector_math: ^2.1.2
   video_player: ^2.4.6
+  wakelock: ^0.6.2
 
 dev_dependencies:
   flutter_lints: ^1.0.0
@@ -57,6 +68,7 @@ flutter:
   assets:
     - assets/images/
     - assets/videos/
+    - assets/ringtone/
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
   # For details regarding adding assets from package dependencies, see
